# signature_applications

./: .gitignore  .pre-commit-config.yaml  README.md
anomaly_detection_language_dataset/: README.md  alphabet_analysis.ipynb  language_dataset_anomalies_data.ipynb  load_data.py  pyproject.toml  requirements.txt  train_english_char_bert.ipynb
anomaly_detection_language_dataset/data/: corpus_sample.pkl  english_train.pkl  wordlist_de.txt  wordlist_en.txt  wordlist_fr.txt  wordlist_sv.txt
controlled_neural_differential_equations/: README.md  logsignature.ipynb  pyproject.toml  requirements.txt  time_series_classification.ipynb
drone_identification/: .gitignore  README.md  drone_identification.ipynb  expected_path_signatures.py  pyproject.toml  requirements.txt
getting_started/: getting_started.ipynb
human_action_recognition/: .gitignore  README.md  jhmdb_demo.ipynb  pyproject.toml  requirements.txt  requirements_torch.txt  util.py
mnist_classification/: .gitignore  MNIST_funcs.py  README.md  handwritten_digit_classification.ipynb  pyproject.toml  requirements.txt
natural_language_processing/: README.md  nlp_demo.ipynb  requirements.txt  requirements_torch.txt
sepsis_detection/: README.md  pyproject.toml  sepsis_detection.ipynb
