[project]
name = "drone-identification"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "esig (>=1.0.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
