[project]
name = "human-action-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "moviepy (==1.0.3)",
    "notebook (>=7.3.2,<8.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "datasetloader @ git+https://github.com/datasig-ac-uk/DatasetLoader.git",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "psfdataset @ git+https://github.com/datasig-ac-uk/PSFDataset.git",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
